--- a/client/index.html
+++ b/client/index.html
@@ -20,7 +20,7 @@
       }
     </script>
     <!-- your scripts -->
-    <script src="env/config.js"></script>
+    <!-- <script src="env/config.js"></script> -->
     <script src="scripts/app.js"></script>
     <script src="scripts/main.js"></script>
   </head>
